- doc/announce.txt: Updated the release date. (VRI)

* Release: 0.8.7

2012-06-20
- desk/deskmain.c desk/desktop.dfn: Added labels to About box tree to
  avoid hardcoded object numbers. (RFB)

2012-06-22
- bios/screen.c: Split vmode table for clarity & future refactoring. (RFB)
- bios/screen.c: Save space & time by eliminating entries with duplicate
  data in vga vmode table. (RFB)
- bios/screen.c bios/screen.h: Use default videl boot resolution if VDI
  does not support NVRAM value. (RFB)
- bios/vectors.S: Clean up for __mcoldfire__ and CONF_ATARI_HARDWARE. (VRI)
- bios/ide.c: Reorganization for future changes. (VRI)
- bios/screen.c: Update comments to reflect recent changes. (RFB)
- bdos/bdosmain.c: Remove function wrappers (no longer needed). (RFB)
- bdos/time.c: Avoid theoretical race condition in time_init(). (RFB)
- aes/gemfmalt.c: Use #defines to convert icon number to icon image for
  form_alert(). (RFB)
- aes/gemfmalt.c: Use gem_rsc.h #defines instead of local #defines. (RFB)

2012-06-23
- aes/gemsuper.c: Use #defines to convert from mouse number to mouse
  image for graf_mouse(). (RFB)
- bios/tosvars.h bios/tosvars.S: Mark vblsem as volatile for safety. (VRI)
- bios/bios.c bios/screen.c: Cleaned up bios_init() initialization order. (VRI)
- bios/bios.c: Initialized the BIOS console early to see debug messages. (VRI)
- Makefile release.mk bios/aciavecs.S bios/amiga.c bios/amiga.h bios/amiga2.S
  bios/bios.c bios/ide.c bios/machine.c bios/memory.S bios/screen.c
  bios/startup.S doc/readme-amiga.txt include/config.h tools/mkrom.c: Added
  support for Amiga hardware. (VRI)
- aes/gemfmalt.c: Issue debug msg if lines or buttons in form_alert()
  exceed standard TOS lengths. (RFB)

2012-06-24
- bios/screen.c bios/screen.h vdi/vdi_control.c: Fix bug: vq_extnd(mode 1)
  always returned 0 for LUT support. (RFB)
- aes/geminit.c: Use gem_rsc.h #defines instead of local #defines. (RFB)

2012-06-25
- bios/floppy.c bios/nvram.c: Added debug traces. (VRI)